fix scrollBar in menu

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -105,7 +105,7 @@ body{
     align-items: center;
 }
 .news-list-title{
-    margin-bottom: 40px;
+    margin-bottom: 25px;
     padding-left: 42px;
 }
 .menu-category-open .category-list-title{
